unpackaged/main/default/objects/Task_Template__c/fields/Case_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Account_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account type related to the case so we can show it on the task level</description>
    <label>Case Account Type</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>