unpackaged/main/default/objects/Task_Template__c/fields/Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Template</label>
    <referenceTo>Case_Template__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>