unpackaged/main/default/objects/Task_Template__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>