unpackaged/main/default/objects/Task_Template__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days from Previous Task Completion</fullName>
            </value>
            <value>
                <fullName>Days from Case Creation</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>After Referenced Field</fullName>
            </value>
            <value>
                <fullName>Before Referenced Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>