unpackaged/main/default/objects/Task_Template__c/fields/FA_Team_Permission__c.field-meta.xml
<CustomField>
    <fullName>FA_Team_Permission__c</fullName>
    <label>FA Team Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Draft Paperwork</fullName>
            </value>
            <value>
                <fullName>Review Paperwork</fullName>
            </value>
            <value>
                <fullName>Send Notifications</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>Associate Advisor</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>