unpackaged/main/default/objects/Task_Template__c/fields/Needs_2nd_Ops_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_2nd_Ops_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs 2nd Ops Review</label>
    <type>Checkbox</type>
</CustomField>