unpackaged/main/default/objects/Task_Template__c/fields/Next_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>