unpackaged/main/default/objects/Task_Template__c/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <label>Old ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>