unpackaged/main/default/objects/Task_Template__c/fields/Previous_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Previous_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Templates (Previous Task Template)</relationshipLabel>
    <relationshipName>Task_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>