unpackaged/main/default/objects/Task_Template__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Back Office Operations</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Custodian Submittal</fullName>
            </value>
            <value>
                <fullName>Principal Review</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>