unpackaged/main/default/objects/Task_Template__c/fields/Recalculate_Template_After_Completion__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Template_After_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Template After Completion</label>
    <type>Checkbox</type>
</CustomField>