unpackaged/main/default/objects/Task_Template__c/fields/Referenced_Field__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Field__c</fullName>
    <label>Referenced Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>