unpackaged/main/default/objects/Task_Template__c/fields/Specific_User__c.field-meta.xml
<CustomField>
    <fullName>Specific_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specific User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>