unpackaged/main/default/objects/Task_Template__c/fields/Task_Template_Testing_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Template_Testing_Name__c</fullName>
    <label>Task Template Testing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>