unpackaged/main/default/objects/Task_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Task_Template_Testing_Name__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>FA_Team_Permission__c</columns>
    <columns>Queue__c</columns>
    <columns>Description__c</columns>
    <columns>Specific_User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>